# django-sp

./: .bumpversion.cfg  .circle.yml  .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  docs.yml  pr-rebase-on-push.yaml  pre-commit.yml  upgrade-dependency.yaml
docs/: conf.py  index.md
news/: +social-active-users-filter.doc.rst  +urlfield-assume-scheme.bugfix.rst
news/process/: 20260623-lock-upgrade.rst  20260627-lock-upgrade.rst  20260703-lock-upgrade.rst  20260707-lock-upgrade.rst  20260709-lock-upgrade.rst  20260710-lock-upgrade.rst  20260715-lock-upgrade.rst  20260717-lock-upgrade.rst
py310-django32.txt/: py310-django32.txt
py311-django42.txt/: py311-django42.txt
py38-django42.txt/: py38-django42.txt
py39-django42.txt/: py39-django42.txt
requirements/: compile.py  docs.txt  py310-django32.txt  py310-django40.txt  py310-django42.txt  py310-django52.txt  py311-django32.txt  py311-django42.txt  py311-django52.txt  py312-django32.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py36-django22.txt  py36-django32.txt  py37-django22.txt  py37-django32.txt  py38-django22.txt  py38-django32.txt  py38-django40.txt  py38-django42.txt  py39-django22.txt  py39-django32.txt  py39-django40.txt  py39-django42.txt  regenerate_locks.py  requirements.in  requirements.txt  runtime.in
socialprofile/: __init__.py  admin.py  forms.py  models.py  pipeline.py  urls.py  views.py
socialprofile/locale/en/LC_MESSAGES/: django.mo
socialprofile/migrations/: 0001_initial.py  0002_auto_20170107_0237.py  _0001_initial.py
socialprofile/templates/: base.html
socialprofile/templates/socialprofile/: sp_account_select.html  sp_delete_account_modal.html  sp_profile_edit.html  sp_profile_view.html
socialprofile/templatetags/: socialprofile_tags.py
src/socialprofile/: __init__.py  admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  validators.py  views.py  widgets.py
src/socialprofile/locale/en/LC_MESSAGES/: django.po
src/socialprofile/locale/it/LC_MESSAGES/: django.po  djangojs.po
src/socialprofile/migrations/: 0001_initial.py  0002_auto_20170107_0237.py  0002_models_proxy.py  0003_merge_20200207_1147.py  0004_auto_20200305_1946.py  0005_auto_20211030_2237.py  0006_auto_20211030_2242.py  0007_auto_20200403_1525.py  0008_auto_20201117_1209.py  0009_auto_20210214_1722.py  0010_auto_20211101_1214.py  0011_delete_group.py  0012_auto_20211129_1613.py  0013_auto_20211129_1639.py  0014_auto_20211129_1729.py  0015_auto_20211129_2117.py  0016_auto_20211129_2259.py  0017_auto_20211129_2305.py  0018_auto_20211130_1937.py  0019_auto_20211202_2216.py  0020_remove_socialprofile_last_accessed.py  0021_auto_20211214_2019.py  0022_auto_20211215_2357.py  0023_auto_20211216_1745.py  0024_auto_20220111_0008.py  0025_auto_20220317_1059.py  0026_socialprofile_edited_by_live.py  0027_delete_proxy_phonedevice.py  0028_alter_proxysession_options.py  0029_socialprofiles_emails.py
src/socialprofile/static/socialprofile/css/: card.css  edit.css  oauth.css
src/socialprofile/static/socialprofile/css/plugins/: jquery.Jcrop.min.css  sweetalert2.min.css
src/socialprofile/static/socialprofile/js/: edit.js  select.js
src/socialprofile/templates/: base.html
src/socialprofile/templates/socialprofile/: sp_account_select.html  sp_delete_account_modal.html  sp_new_association.html  sp_new_profile.html  sp_profile_edit.html  sp_profile_inactive.html  sp_profile_view.html  sp_profile_view_all.html
src/socialprofile/templates/user_sessions/: session_list.html
src/socialprofile/templatetags/: socialprofile_tags.py
tests/: settings.py  test_forms.py  test_pipeline.py  test_settings.py  test_tags.py  test_user.py  tests.py  tests_forms.py  tests_pipeline.py  urls.py  views.py
