[build-system]
requires = [
  "setuptools >= 77; python_version >= '3.9'",
  "setuptools >= 40.8.0; python_version < '3.9'",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-sp"
description = "Django application for custom Social Profile Auth and User model."
authors = [
    { name = "DLRSP", email = "dlrsp.dev@gmail.com" },
]
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "socialprofile"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "django-errors",
    "python-social-auth",
    "social-auth-app-django",
    "django-otp",
    "django-two-factor-auth",
    "django-oauth-toolkit",
    "djangorestframework",
    "easy_thumbnails",
    "django-cors-headers",
    "geoip2",
    "django-user-sessions",
    "django-axes",
    "phonenumbers",
    "django-phonenumber-field",
    "django-image-cropping",
    "django-countries",
    "django-crispy-forms",
    "sweetify",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "codecov",
    "pytest",
    "pytest-django",
]
linting = [
    "flake8",
    "flake8-pyproject",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "flake8-typing-imports",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/DLRSP/django-sp"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "socialprofile.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.bdist_wheel]
universal = false

[tool.flake8]
max-line-length = 80
select = ["E", "F", "W", "B", "B950", "C", "I", "TYP"]
ignore = ["E203", "E501", "W503", "B950"]
per-file-ignores = [
    "**/migrations/*:B950",
]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["socialprofile"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"

# Read by flake8 when flake8-pyproject is installed (extra `linting`).
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.towncrier]
package = "socialprofile"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
version = "1.23.3"

# For rendering properly for this project
issue_format = "`#{issue} <https://github.com/DLRSP/django-sp/issues/{issue}>`_"
# template = "tools/news/template.rst"

# Grouping of entries, within our changelog
type = [
  { name = "Process",                   directory = "process", showcontent = true },
  { name = "Deprecations and Removals", directory = "removal", showcontent = true },
  { name = "Features",                  directory = "feature", showcontent = true },
  { name = "Bug Fixes",                 directory = "bugfix",  showcontent = true },
  { name = "Vendored Libraries",        directory = "vendor",  showcontent = true },
  { name = "Improved Documentation",    directory = "doc",     showcontent = true },
  { name = "Trivial Changes",           directory = "trivial", showcontent = false },
]

# bump-my-version
[tool.bumpversion]
current_version = "1.23.3"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "./src/socialprofile/__init__.py"
