[bdist_wheel]
universal=1

[metadata]
name = django-sp
version = 0.12.0
url = https://github.com/DLRSP/django-sp
author = DLRSP
author_email = dlrsp.dev@gmail.com
description = Django application for custom Social Profile Auth and User model.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
keywords =
    django
    socialprofile
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries


[options]
package_dir=
    =src
setup_requires = Django>=2.2
install_requires =
    django-errors
    python-social-auth            # <-- Need By Auth Process: OAuth2 Social
    social-auth-app-django        # <-- Need By Auth Process: OAuth2 Social
    django-otp                    # <-- Need By Auth Process: One-Time-Password
    django-two-factor-auth        # <-- Need By Auth Process: One-Time-Password
    django-oauth-toolkit          # <-- Need By Auth Process: OAuth2 Token
    # 'djangorestframework-jwt',  # <-- Need By Auth Process: Token (deprecated)
    djangorestframework           # <-- Need By Rest API
    easy_thumbnails               # <-- Need By Imge Cropping
    django-cors-headers
    django-user-sessions          # <-- Need By Monitor
    django-axes                   # <-- Need By Monitor
    phonenumbers                  # <-- Need By Edit
    django-phonenumber-field      # <-- Need By Edit
    django-image-cropping         # <-- Need By Edit
    django-countries              # <-- Need By Edit
    django-crispy-forms           # <-- Need By Edit
    sweetify                      # <-- Need By Edit
packages = find:
include_package_data = True
python_requires = >=3.6
zip_safe = False

[options.extras_require]
testing =
    coverage
    codecov
linting =
    flake8
    pylint

[options.packages.find]
where = src

[coverage:run]
branch = True
source = socialprofile

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I,TYP
ignore = E203,E501,W503
